plugins {
  id "java"
  id "org.springframework.boot" version "2.4.4"
  id "io.spring.dependency-management" version "1.0.11.RELEASE"

  // Code quality plugins
  id "checkstyle"
  id "jacoco"
  id "org.sonarqube" version "3.1.1"
}

group = "uk.nhs.hee.tis.revalidation"
version = "0.0.1"
sourceCompatibility = "11"

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
  maven {
     url "https://hee-430723991443.d.codeartifact.eu-west-1.amazonaws.com/maven/Health-Education-England/"
     credentials {
         username "aws"
         password System.env.CODEARTIFACT_AUTH_TOKEN
     }
  }
}

dependencies {
  // Spring Boot starters
  implementation "org.springframework.boot:spring-boot-starter-actuator"
  implementation "org.springframework.boot:spring-boot-starter-web"
  implementation "org.springframework.boot:spring-boot-starter-web-services"
  implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
  implementation "org.springframework.boot:spring-boot-starter-amqp"
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-elasticsearch', version: '2.4.4'

  testImplementation("org.springframework.boot:spring-boot-starter-test") {
    exclude group: "org.junit.vintage", module: "junit-vintage-engine"
  }

  // GMC-API
  implementation "uk.nhs.hee.tis:gmc-api:1.0.0"

  // Lombok
  compileOnly "org.projectlombok:lombok"
  annotationProcessor "org.projectlombok:lombok"

  // MapStruct
  implementation "org.mapstruct:mapstruct:1.4.2.Final"
  annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
  testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"

  // Sentry reporting
  ext.sentryVersion = "4.3.0"
  implementation "io.sentry:sentry-spring-boot-starter:$sentryVersion"
  implementation "io.sentry:sentry-logback:$sentryVersion"

  implementation "com.github.javafaker:javafaker:1.0.2"
  implementation "io.springfox:springfox-swagger2:3.0.0"
  implementation "io.springfox:springfox-swagger-ui:3.0.0"

  implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
  implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
}

checkstyle {
  toolVersion = "8.29"
  config = resources.text.fromArchiveEntry(configurations.checkstyle[0], "google_checks.xml")
}

jacocoTestReport {
  reports {
    html.enabled true
    xml.enabled true
  }
}

sonarqube {
  properties {
    property "sonar.host.url", "https://sonarcloud.io"
    property "sonar.login", System.getenv("SONAR_TOKEN")
    property "sonar.organization", "health-education-england"
    property "sonar.projectKey", "Health-Education-England_tis-revalidation-connection"

    property "sonar.java.checkstyle.reportPaths",
      "build/reports/checkstyle/main.xml,build/reports/checkstyle/test.xml"
  }
}

test {
  finalizedBy jacocoTestReport
  useJUnitPlatform()
}
